[PPBUGS-582] fixed (Analytics: The icon and placeholder text should be center aligned vertically) (#518)

--- a/src/elements/atm.ButtonInput/styles.scss
+++ b/src/elements/atm.ButtonInput/styles.scss
@@ -35,7 +35,8 @@
 
 }
 .hint {
-    top: 10px;
+    line-height: 32px;
+    top: 0;
     left: 5.8rem;
     font-size: 11px !important;
     color: #888888;
